# BitLedger

./: .gitignore  BitLedger_Protocol_v3.docx  BitLedger_Universal_Domain.docx  CLAUDE.md  DEVGUIDE.md  EXAMPLES.md  PLAN_hash_templates_recall.md  PLAN_value_cli_ux.md  README.md  RELEASE.md  TECHNICAL_OVERVIEW.md  backlog_april18.md  cli_readme.md  pyproject.toml  session.bl
bitledger/: __init__.py  bitledger.py  cli.py  cli_encode.py  cli_help.py  cli_make.py  cli_profile.py  config.py  currencies.py  decoder.py  encoder.py  errors.py  formatter.py  hash_log.py  hasher.py  models.py  rounding_report.py  templates.py
bitledger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
project/analysis/: bitledger_generalsystem_by_grok.md  bitledger_notation_reference.md  hashing_design_analysis.md  mathmodel_by_chatgpt.md  mathmodel_by_grok.md  modideas_by_grok.md  novelty_by_grok.md  value_encoding_scaling_factor_reference.md
project/overviews/: BitLedger_Technical_Overview.docx  TECHNICAL_OVERVIEW.md
project/reviews/: bitledger_clireview.md  review_by_chatgpt.md  review_by_grok.md
system/: ONBOARDING.md  README.md  TASKS.md  fragility-register.md
system/audits/: explorer-a-report.md  explorer-b-report.md
tests/: __init__.py  test_cli_decode_file.py  test_cli_encode_advanced.py  test_cli_encode_amount.py  test_cli_make.py  test_cli_profile.py  test_control.py  test_decoder.py  test_encoder.py  test_formatter.py  test_models.py  test_profiles.py  test_quantities.py  test_rounding_report.py  test_roundtrip.py  test_values.py  test_wizard.py
(+52 files in other folders)
