[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bitledger"
version = "1.0.0"
description = "BitLedger protocol v3 — encode, decode, simulate"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
bitledger = "bitledger.bitledger:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bitledger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
